# NLP_Matching

./: .gitignore  DEPLOYMENT.md  csv_parse.py  direct_match.py  filters.py  index.py  main.py  matching_notebook.ipynb  nlp_ai_prep.py  nlp_data_prep.py  nlp_train.py  overrides.json  pullorgs.py  pytest.ini  render.yaml  requirements.txt  vercel.json
api/: __init__.py  index.py
backend/: requirements.txt  run_server.py
data/: Interest Form - Mentee Form Responses.csv  Interest Form - Mentor Form Responses.csv  abm_programs.txt  concentrations.txt  grad_programs.txt  ncsu_orgs.txt  phd_programs.txt  sample_mentees.csv  sample_mentors.csv
documentation/: API_REFERENCE.md  ARCHITECTURE.md  CLOUD_RUN_SETUP.md  DATABASE_SCHEMA.md  LOCAL_SETUP.md  (+10 more)
nlp_project/: NLP_Pipeline_Setup_Usage.ipynb  README.md  SCORING.md  main.py  more_info.md  pyproject.toml  scoring.csv  scratch.csv
nlp_project/mentor_matching/: constants.py  embeddings.py  matching.py  models.py  parsing.py  pipeline.py  reporting.py  retry_utils.py  scoring.py  scoring_config.py  state_store.py  text_processing.py
nlp_project/nlp_pipeline/: __init__.py  normalize.py  pipeline.py  segmentation.py  stopwords.py  tagging.py  tf_model.py  tokenizing.py  vectorize.py
nlp_project/nlp_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nlp_project/state/: matching_state.json
nlp_project/tests/: test_0_import_speed.py  test_1_segmentation.py  test_2_tokenizing.py  test_3_stopwords.py  test_4_normalize.py  test_5_tagging.py  test_6_vectorize_and_tf_model.py  test_7_integration_pipeline.py
(+175 files in other folders)
