[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp_project"
version = "0.1.0"
description = "Stage-based NLP pipeline with spaCy and TensorFlow/Keras baseline classifier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "spacy>=3.7",
  "tensorflow>=2.14",
  "pytest>=7.4",
  "nltk>=3.8",
]

[tool.setuptools]
packages = ["nlp_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
