[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-project"
version = "0.1.0"
description = "Mentor-mentee matching pipeline with rerunnable state"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["mentor_matching"]
